--- a/analysis/2_Analisis_Temporal.ipynb
+++ b/analysis/2_Analisis_Temporal.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2c4278e2",
    "metadata": {},
    "outputs": [],
@@ -135,6 +135,30 @@
     "        if date.weekday() == 0:\n",
     "            count += 1\n",
     "            if count == 3:\n",
+    "                return date\n",
+    "            \n",
+    "def father_day(current_year):\n",
+    "    \"\"\"\n",
+    "    Third Sunday of each june.\n",
+    "    \"\"\"\n",
+    "    count = 0\n",
+    "    for day in range(1, 31):  # june has 30 days\n",
+    "        date = datetime(current_year, 6, day)\n",
+    "        if date.weekday() == 6:  # sunday is equal to 6\n",
+    "            count += 1\n",
+    "            if count == 3:\n",
+    "                return date\n",
+    "\n",
+    "def thanksgiving(current_year):\n",
+    "    \"\"\"\n",
+    "    Fourth thursday of each november\n",
+    "    \"\"\"\n",
+    "    count = 0\n",
+    "    for day in range(1, 31):  # november has 30 days\n",
+    "        date = datetime(current_year, 11, day)\n",
+    "        if date.weekday() == 3:  # monday is equal to 0\n",
+    "            count += 1\n",
+    "            if count == 4:\n",
     "                return date"
    ]
   },
